public/videostyle.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  overflow: hidden;
}
html,
body {
  height: 100%;
}
#video-grid {
  /* width: 1075px; */
  width: 100%;
  height: 100%;
  background-color: rgb(56, 56, 56);
  display: grid;
  grid-template-columns: auto auto auto;
  justify-content: space-evenly;
  align-content: space-evenly;
  column-gap: 20px;
  row-gap: 20px;

  overflow-y: scroll;
}
#video-grid::-webkit-scrollbar {
  display: none;
}
video {
  width: 350px;
  height: 250px;
}
.container {
  display: flex;
  height: 100%;
}
.chat {
  background-color: rgb(38, 38, 38);
  height: 100%;
  width: 464px;
  overflow: scroll;
  position: relative;
}
.chat::-webkit-scrollbar {
  display: none;
}

.message-container {
  position: absolute;
  bottom: 0;
  width: 100%;
  right: 0;
}

#chat-message {
  width: 100%;
  height: 60px;
  outline: none;
  border: none;
  padding: 8px;
  font-size: 16px;
  z-index: -1;
}

#submit {
  position: absolute;
  bottom: 6px;
  right: 0;

  margin-right: 8px;
  color: black;
}

ul {
  list-style: none;
}
li {
  color: white;
  margin-bottom: 4px;
}
#chat-div {
  color: white;
  margin-left: 8px;
  width: 100%;
  height: 90%;

  overflow-y: scroll;
}
#chat-div::-webkit-scrollbar {
  display: none;
}
h2 {
  font-size: 18px;
  margin-top: 10px;
  margin-bottom: 3px;
}

h3 {
  overflow-wrap: break-word;
  margin-left: 8px;
  margin-right: 8px;
}

.btn-bar {
  background-color: rgb(38, 38, 38);
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 60px;
  display: flex;
}

.video-btn,
.microphone-btn {
  color: red;
  margin-left: 1rem;
  margin-top: 7px;
  width: 37px;
  padding: 4px;
}

.invite-btn {
  color: rgb(29, 161, 242);
  margin-right: 1rem;
  margin-top: 7px;
  width: 53px;
  padding: 4px;
}
.joined {
  position: absolute;
  bottom: 7rem;
  right: 4rem;
  color: white;
  font-size: 17px;
}
#cross {
  position: absolute;
  color: lightgray;
  right: 1px;
  margin-top: 10px;
  width: 40px;
  display: none;
  font-size: 28px !important;
}
.comment {
  display: none;
}
@media only screen and (max-width: 1536px) {
  #video-grid {
    grid-template-columns: auto auto;
  }
  video {
    width: 350px;
    height: 250px;
  }
}
@media only screen and (max-width: 1054px) {
  .comment {
    display: block;
  }
  .chat {
    display: none;
  }
  #cross {
    display: block;
  }

  .videoss {
    width: 100px;
  }
}

@media only screen and (max-width: 748px) {
  #video-grid {
    grid-template-columns: auto;
  }
  video {
    width: 250px;
    height: 200px;
  }
  .joined {
    font-size: 15px;
  }
}

.sheild,
.endcall,
.comment,
.users {
  color: lightgray;
  width: 37px;
  padding: 4px;
  margin-right: 8px;
}
.endcall {
  color: red;
}
.users {
  width: 53px;
  padding: 4px;
}

.middle-btn {
  display: flex;
  margin: auto;
  margin-top: 7px;
}
.videoss {
  width: 1075px;
  position: relative;
}

@media only screen and (max-width: 600px) {
  .fsize {
    font-size: 20px !important;
  }
  h2 {
    font-size: 13px;
  }
  h3 {
    font-size: 15px;
  }
}

